# High-Frequency-Trading-Strategy-Backtester

./: Dockerfile  LICENSE  Makefile  README.md  bench_results.csv  pyproject.toml  setup.py  setup_cython.py
.github/workflows/: benchmark.yml
ci_benchmark_results/: bench_100000.csv  bench_1000000.csv  bench_500000.csv  summary.md
ci_benchmark_results/plots/: benchmark_metadata.json
config/: backtest.yaml  demo_backtest.yaml
cpp/: CMakeLists.txt  match_engine.cpp  pybind_module.cpp  test_cpp_extension.py
docs/: README.md  architecture.md
examples/: README.md  generate_synthetic.py  quickstart_config.yaml
examples/notebooks/: 01_quickstart.ipynb  README.md  basic_backtest.ipynb  basic_backtest.py  strategy_comparison.py
examples/sample_data/: README.md  aapl_book.parquet  aapl_l1.csv  aapl_l1.parquet  aapl_trades.parquet  bad_data_fixture.parquet  book_update_bad_fixture.parquet  book_update_fixture.parquet  generate_fixtures.py  generate_sample_data.py  l2_small.csv  l2_small.parquet  trade_fixture.parquet
flashback/: __init__.py  __main__.py
flashback.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
flashback/analysis/: __init__.py  latency_sensitivity.py
flashback/cli/: __init__.py  config.py  main.py  pack.py  runner.py  sweeper.py
flashback/config/: __init__.py  config.py  parser.py
flashback/core/: __init__.py  clock.py  engine.py  events.py
flashback/data/: __init__.py  loader.py  parser.py  schema.py
flashback/exec/: __init__.py  executor.py  router.py  slippage.py
flashback/market/: __init__.py  _match.c  _match.pyx  _match_cpp_wrapper.py  _match_python.py  _match_wrapper.py  book.py  fees.py  latency.py  orders.py  slippage.py  transaction_costs.py
flashback/metrics/: __init__.py  bench_plots.py  calculator.py  drawdown.py  latency.py  performance.py  sharpe.py  turnover.py
flashback/reporting/: __init__.py  plots.py  reporter.py
flashback/risk/: __init__.py  limits.py  manager.py  portfolio.py  positions.py
flashback/strategy/: __init__.py  base.py  mean_reversion.py  momentum_imbalance.py
flashback/utils/: __init__.py  bench_cpp.py  logger.py  profiler.py  timer.py
runs/2025-01-06T00-00-00/: detailed_sweep_results.json  sensitivity_analysis.json  snapshots.csv
runs/2025-10-06T12-49-11/: positions.parquet
runs/2025-10-06T12-49-36/: blotter.parquet
runs/2025-10-06T12-49-37_sweep/: latency_sweep.csv
runs/2025-10-06T12-52-01/: performance.json
runs/2025-10-06T12-52-02_sweep/: config.yaml
runs/2025-10-06T12-52-48/: config.yaml
runs/2025-10-06T12-52-49/: config.yaml
runs/2025-10-06T12-52-49_sweep/: performance.json
runs/2025-10-06T12-53-51/: config.yaml  positions.parquet
runs/2025-10-06T12-54-00/: config.yaml
runs/2025-10-06T12-54-05/: config.yaml
runs/2025-10-06T12-54-06/: config.yaml
runs/2025-10-06T12-54-07/: config.yaml
runs/2025-10-06T12-54-08/: config.yaml
runs/2025-10-06T12-54-09/: config.yaml  performance.csv  performance.json
runs/2025-10-06T12-54-10/: config.yaml
runs/2025-10-06T12-54-11/: config.yaml
runs/2025-10-06T12-54-28/: config.yaml
runs/2025-10-06T12-54-29/: config.yaml
runs/2025-10-06T12-54-30/: config.yaml
runs/2025-10-06T12-54-31/: config.yaml
runs/2025-10-06T12-54-32/: config.yaml
runs/2025-10-06T12-54-33/: config.yaml
runs/2025-10-06T12-54-52/: config.yaml
runs/2025-10-06T12-54-54/: config.yaml
runs/2025-10-06T12-54-55/: config.yaml
runs/2025-10-06T12-54-56/: config.yaml
runs/2025-10-06T12-54-57/: config.yaml
runs/2025-10-06T12-54-58/: config.yaml
runs/2025-10-06T12-55-26/: config.yaml  performance.csv
runs/2025-10-06T13-58-12/: config.yaml  performance.json
runs/2025-10-06T13-58-15/: config.yaml
runs/2025-10-06T13-58-16/: config.yaml  performance.csv  positions.parquet
runs/2025-10-06T13-58-17/: config.yaml
runs/2025-10-06T13-58-17_sweep/: config.yaml
runs/2025-10-06T13-59-20_sweep/: config.yaml  performance.json  positions.parquet
runs/2025-10-06T14-00-38/: config.yaml
runs/2025-10-06T14-01-22/: config.yaml
runs/2025-10-06T14-14-08/: config.yaml
runs/2025-10-06T14-31-03/benchmarks/: benchmark_metadata.json
runs/2025-10-06T14-32-49/benchmarks/: benchmark_metadata.json
runs/2025-10-07T10-30-11/: positions.parquet
runs/2025-10-07T10-30-12_sweep/: latency_sweep.csv  performance.csv
runs/2025-10-07T10-38-16_sweep/: config.yaml  latency_sweep.csv  performance.csv  performance.json
runs/2025-10-07T10-52-32/: performance.csv
runs/2025-10-07T10-52-37/: config.yaml
runs/2025-10-07T10-52-40/: config.yaml  performance.json
runs/2025-10-07T10-52-41_sweep/: config.yaml
runs/2025-10-07T12-57-47_sweep/: performance.csv
runs/2025-10-07T18-19-00/: config.yaml  performance.csv  performance.json  positions.parquet
runs/2025-10-07T18-26-24_sweep/: config.yaml  performance.json
runs/2025-10-07T18-28-27_sweep/: latency_sweep.csv  performance.csv
runs/demo_run/: config.yaml  detailed_sweep_results.json  sensitivity_analysis.json
runs/demo_run/latency_1000000ns/: config.yaml  trades.parquet
runs/quickstart_demo/: detailed_results.json  detailed_sweep_results.json  sensitivity_analysis.json  snapshots.csv
scripts/: ci_benchmark.sh  demo.sh  demo_fast.sh
test_output/: detailed_results.json  latency_sensitivity_summary.csv  sensitivity_analysis.json
tests/: __init__.py  conftest.py
tests/integration/: test_backtest.py  test_cli_integration.py  test_e2e_backtest.py  test_market_integration.py  test_runs_directory.py  test_simple_strategy.py
tests/unit/: test_analysis_latency_sensitivity.py  test_cli_main.py  test_clock.py  test_config_config.py  test_config_parser.py  test_core.py  test_cpp_bit_for_bit.py  test_cython_bit_for_bit.py  test_exec_router.py  test_market.py  test_market_book.py  test_market_fees.py  test_market_latency.py  test_market_match_performance.py  test_market_orders.py  test_market_slippage.py  test_market_transaction_costs.py  test_matching_engine_benchmark.py  test_metrics_performance.py  test_risk_portfolio.py  test_strategy_mean_reversion.py  test_strategy_momentum_imbalance.py
(+9 files in other folders)
